# SeeleLog

./: .gitignore  CMakeLists.txt  main.cpp
SeeleLog/: EditorConsoleSink.h  Log.cpp  Log.h  backward.cpp
